<resources>
    <string name="app_name">Health Calc</string>

    <string name="app_titulo"> Health\nCalc </string>

    <string name="login_activity_login">Login</string>

    <string name="login_activity_subtitulo"> Faça login para continuar</string>

    <string name="login_activity_email"> E-mail</string>

    <string name="login_activity_senha"> senha</string>

    <string name="login_activity_entrar"> entrar</string>
    <string name="login_activity_lembrar_me">Lembrar-me</string>
    <string name="login_activity_esqueci_a_senha">Esqueci a senha</string>
    <string name="login_activity_nao_tem_uma_conta">Nao tem uma conta ?</string>
    <string name="login_activity_criar_uma_conta_agora">Criar uma conta agora</string>
    <string name="trocar_foto">Trocar foto</string>
    <string name="dados_para_autentica_o">Dados Para Autenticação</string>
    <string name="data_nascimento">Data Nascimento</string>
    <string name="altura">Altura</string>





    <string-array name="niveis">
        <item>Atividade leve</item>
        <item>Atividade moderada</item>
        <item>Atividade intensa</item>


    </string-array>

</resources>