<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <RelativeLayout
        android:id="@+id/rl_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#e7008a"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:paddingTop="16dp"
        android:paddingStart="32dp"
        android:paddingEnd="32dp">

        <TextView
            android:id="@+id/tv_titulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:text="@string/app_titulo"
            android:textAppearance="@style/titulo" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/bmi"
            android:layout_alignParentEnd="true"
            android:layout_alignTop="@+id/tv_titulo"
            android:layout_alignBottom="@+id/tv_titulo"/>

    </RelativeLayout>

    <ImageView
        android:id="@+id/wave_1"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_below="@+id/rl_header"
        android:src="@drawable/ic_wave__1_"
        android:scaleType="fitXY"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"/>

    <ImageView
        android:id="@+id/wave"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:src="@drawable/ic_wave"
        android:scaleType="fitXY"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/wave_1"
        android:layout_above="@+id/wave"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingStart="32dp"
            android:paddingEnd="32dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_activity_login"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_activity_subtitulo"/>
            
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_activity_email"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_marginTop="32dp"
                app:endIconMode="clear_text">


                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:drawableStart="@drawable/email_24"
                    android:drawablePadding="8dp"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_activity_senha"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_marginTop="8dp"
                app:passwordToggleEnabled="true">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberPassword"
                    android:drawableStart="@drawable/lock_24"
                    android:drawablePadding="8dp"

                    />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_activity_entrar"/> 

        </LinearLayout>

    </ScrollView>



</RelativeLayout>
